// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown renders correctly when disabled 1`] = `
<div
  className="dropdown-wrapper css-1nusrsy-container"
  onKeyDown={[Function]}
>
  <div
    className=" css-1otez1o-control"
    onMouseDown={[Function]}
    onTouchEnd={[Function]}
  >
    <div
      className=" css-6tu5sc-Component"
    >
      <div
        className=" css-1dtegfv-placeholder"
      >
        
      </div>
      <div
        className="css-lkl2xd-Component"
      >
        <div
          className=""
          style={
            Object {
              "display": "inline-block",
            }
          }
        >
          <input
            aria-autocomplete="list"
            aria-label="Dropdown input"
            autoCapitalize="none"
            autoComplete="off"
            autoCorrect="off"
            disabled={true}
            id="react-select-5-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            spellCheck="false"
            style={
              Object {
                "background": 0,
                "border": 0,
                "boxSizing": "content-box",
                "color": "inherit",
                "fontSize": "inherit",
                "label": "input",
                "opacity": 1,
                "outline": 0,
                "padding": 0,
                "width": "1px",
              }
            }
            tabIndex="0"
            type="text"
            value=""
          />
          <div
            style={
              Object {
                "height": 0,
                "left": 0,
                "overflow": "scroll",
                "position": "absolute",
                "top": 0,
                "visibility": "hidden",
                "whiteSpace": "pre",
              }
            }
          >
            
          </div>
        </div>
      </div>
    </div>
    <div
      className=" css-1g9lka8-Component"
    >
      <span
        className=" css-ds71as-Component"
      />
      <div
        aria-hidden="true"
        className="dropdown-indicator css-1ycu3uq-indicatorContainer"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <svg
          aria-hidden={true}
          className="icon_component"
          fill="currentColor"
          height="20px"
          onClick={[Function]}
          tabIndex="-1"
          viewBox="0 0 20 20"
          width="20px"
        >
          <path
            clipRule="evenodd"
            d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown renders correctly when rtl 1`] = `
<div
  className="dropdown-wrapper css-b0xr5u-container"
  onKeyDown={[Function]}
>
  <div
    className=" css-132xx32-control"
    onMouseDown={[Function]}
    onTouchEnd={[Function]}
  >
    <div
      className=" css-xu0d8l-Component"
    >
      <div
        className=" css-1dtegfv-placeholder"
      >
        
      </div>
      <div
        className="css-lkl2xd-Component"
      >
        <div
          className=""
          style={
            Object {
              "display": "inline-block",
            }
          }
        >
          <input
            aria-autocomplete="list"
            aria-label="Dropdown input"
            autoCapitalize="none"
            autoComplete="off"
            autoCorrect="off"
            disabled={false}
            id="react-select-7-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            spellCheck="false"
            style={
              Object {
                "background": 0,
                "border": 0,
                "boxSizing": "content-box",
                "color": "inherit",
                "fontSize": "inherit",
                "label": "input",
                "opacity": 1,
                "outline": 0,
                "padding": 0,
                "width": "1px",
              }
            }
            tabIndex="0"
            type="text"
            value=""
          />
          <div
            style={
              Object {
                "height": 0,
                "left": 0,
                "overflow": "scroll",
                "position": "absolute",
                "top": 0,
                "visibility": "hidden",
                "whiteSpace": "pre",
              }
            }
          >
            
          </div>
        </div>
      </div>
    </div>
    <div
      className=" css-1aqjfd-Component"
    >
      <span
        className=" css-ds71as-Component"
      />
      <div
        aria-hidden="true"
        className="dropdown-indicator css-1ycu3uq-indicatorContainer"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <svg
          aria-hidden={false}
          className="icon_component icon_component--clickable"
          fill="currentColor"
          height="20px"
          onClick={[Function]}
          role="button"
          tabIndex="-1"
          viewBox="0 0 20 20"
          width="20px"
        >
          <path
            clipRule="evenodd"
            d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown renders correctly with autoFocus 1`] = `
<div
  className="dropdown-wrapper css-bbwnb8-container"
  onKeyDown={[Function]}
>
  <div
    className=" css-132xx32-control"
    onMouseDown={[Function]}
    onTouchEnd={[Function]}
  >
    <div
      className=" css-1ht1nal-Component"
    >
      <div
        className=" css-1dtegfv-placeholder"
      >
        
      </div>
      <div
        className="css-lkl2xd-Component"
      >
        <div
          className=""
          style={
            Object {
              "display": "inline-block",
            }
          }
        >
          <input
            aria-autocomplete="list"
            aria-label="Dropdown input"
            autoCapitalize="none"
            autoComplete="off"
            autoCorrect="off"
            disabled={false}
            id="react-select-10-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            spellCheck="false"
            style={
              Object {
                "background": 0,
                "border": 0,
                "boxSizing": "content-box",
                "color": "inherit",
                "fontSize": "inherit",
                "label": "input",
                "opacity": 1,
                "outline": 0,
                "padding": 0,
                "width": "1px",
              }
            }
            tabIndex="0"
            type="text"
            value=""
          />
          <div
            style={
              Object {
                "height": 0,
                "left": 0,
                "overflow": "scroll",
                "position": "absolute",
                "top": 0,
                "visibility": "hidden",
                "whiteSpace": "pre",
              }
            }
          >
            
          </div>
        </div>
      </div>
    </div>
    <div
      className=" css-1aqjfd-Component"
    >
      <span
        className=" css-ds71as-Component"
      />
      <div
        aria-hidden="true"
        className="dropdown-indicator css-1ycu3uq-indicatorContainer"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <svg
          aria-hidden={false}
          className="icon_component icon_component--clickable"
          fill="currentColor"
          height="20px"
          onClick={[Function]}
          role="button"
          tabIndex="-1"
          viewBox="0 0 20 20"
          width="20px"
        >
          <path
            clipRule="evenodd"
            d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown renders correctly with className 1`] = `
<div
  className="dropdown-wrapper test css-bbwnb8-container"
  onKeyDown={[Function]}
>
  <div
    className=" css-132xx32-control"
    onMouseDown={[Function]}
    onTouchEnd={[Function]}
  >
    <div
      className=" css-1ht1nal-Component"
    >
      <div
        className=" css-1dtegfv-placeholder"
      >
        
      </div>
      <div
        className="css-lkl2xd-Component"
      >
        <div
          className=""
          style={
            Object {
              "display": "inline-block",
            }
          }
        >
          <input
            aria-autocomplete="list"
            aria-label="Dropdown input"
            autoCapitalize="none"
            autoComplete="off"
            autoCorrect="off"
            disabled={false}
            id="react-select-3-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            spellCheck="false"
            style={
              Object {
                "background": 0,
                "border": 0,
                "boxSizing": "content-box",
                "color": "inherit",
                "fontSize": "inherit",
                "label": "input",
                "opacity": 1,
                "outline": 0,
                "padding": 0,
                "width": "1px",
              }
            }
            tabIndex="0"
            type="text"
            value=""
          />
          <div
            style={
              Object {
                "height": 0,
                "left": 0,
                "overflow": "scroll",
                "position": "absolute",
                "top": 0,
                "visibility": "hidden",
                "whiteSpace": "pre",
              }
            }
          >
            
          </div>
        </div>
      </div>
    </div>
    <div
      className=" css-1aqjfd-Component"
    >
      <span
        className=" css-ds71as-Component"
      />
      <div
        aria-hidden="true"
        className="dropdown-indicator css-1ycu3uq-indicatorContainer"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <svg
          aria-hidden={false}
          className="icon_component icon_component--clickable"
          fill="currentColor"
          height="20px"
          onClick={[Function]}
          role="button"
          tabIndex="-1"
          viewBox="0 0 20 20"
          width="20px"
        >
          <path
            clipRule="evenodd"
            d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown renders correctly with defaultValue 1`] = `
<div
  className="dropdown-wrapper css-bbwnb8-container"
  onKeyDown={[Function]}
>
  <div
    className=" css-132xx32-control"
    onMouseDown={[Function]}
    onTouchEnd={[Function]}
  >
    <div
      className=" css-1ht1nal-Component"
    >
      <div
        className=" css-1f92y5n-singleValue"
      >
        Ocean
      </div>
      <div
        className="css-lkl2xd-Component"
      >
        <div
          className=""
          style={
            Object {
              "display": "inline-block",
            }
          }
        >
          <input
            aria-autocomplete="list"
            aria-label="Dropdown input"
            autoCapitalize="none"
            autoComplete="off"
            autoCorrect="off"
            disabled={false}
            id="react-select-15-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            spellCheck="false"
            style={
              Object {
                "background": 0,
                "border": 0,
                "boxSizing": "content-box",
                "color": "inherit",
                "fontSize": "inherit",
                "label": "input",
                "opacity": 1,
                "outline": 0,
                "padding": 0,
                "width": "1px",
              }
            }
            tabIndex="0"
            type="text"
            value=""
          />
          <div
            style={
              Object {
                "height": 0,
                "left": 0,
                "overflow": "scroll",
                "position": "absolute",
                "top": 0,
                "visibility": "hidden",
                "whiteSpace": "pre",
              }
            }
          >
            
          </div>
        </div>
      </div>
    </div>
    <div
      className=" css-1aqjfd-Component"
    >
      <div
        aria-hidden="true"
        className="clear-indicator css-11of1qg-Component"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <svg
          aria-hidden={false}
          className="icon_component icon_component--clickable"
          fill="currentColor"
          height="20px"
          onClick={[Function]}
          role="button"
          tabIndex="-1"
          viewBox="0 0 20 20"
          width="20px"
        >
          <path
            clipRule="evenodd"
            d="M6.53033 5.46967C6.23744 5.17678 5.76256 5.17678 5.46967 5.46967C5.17678 5.76256 5.17678 6.23744 5.46967 6.53033L8.62562 9.68628L5.47045 12.8415C5.17756 13.1343 5.17756 13.6092 5.47045 13.9021C5.76334 14.195 6.23822 14.195 6.53111 13.9021L9.68628 10.7469L12.8415 13.9021C13.1343 14.195 13.6092 14.195 13.9021 13.9021C14.195 13.6092 14.195 13.1343 13.9021 12.8415L10.7469 9.68628L13.9029 6.53033C14.1958 6.23744 14.1958 5.76256 13.9029 5.46967C13.61 5.17678 13.1351 5.17678 12.8422 5.46967L9.68628 8.62562L6.53033 5.46967Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </div>
      <span
        className=" css-ds71as-Component"
      />
      <div
        aria-hidden="true"
        className="dropdown-indicator css-1ycu3uq-indicatorContainer"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <svg
          aria-hidden={false}
          className="icon_component icon_component--clickable"
          fill="currentColor"
          height="20px"
          onClick={[Function]}
          role="button"
          tabIndex="-1"
          viewBox="0 0 20 20"
          width="20px"
        >
          <path
            clipRule="evenodd"
            d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown renders correctly with empty props 1`] = `
<div
  className="dropdown-wrapper css-bbwnb8-container"
  onKeyDown={[Function]}
>
  <div
    className=" css-132xx32-control"
    onMouseDown={[Function]}
    onTouchEnd={[Function]}
  >
    <div
      className=" css-1ht1nal-Component"
    >
      <div
        className=" css-1dtegfv-placeholder"
      >
        
      </div>
      <div
        className="css-lkl2xd-Component"
      >
        <div
          className=""
          style={
            Object {
              "display": "inline-block",
            }
          }
        >
          <input
            aria-autocomplete="list"
            aria-label="Dropdown input"
            autoCapitalize="none"
            autoComplete="off"
            autoCorrect="off"
            disabled={false}
            id="react-select-2-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            spellCheck="false"
            style={
              Object {
                "background": 0,
                "border": 0,
                "boxSizing": "content-box",
                "color": "inherit",
                "fontSize": "inherit",
                "label": "input",
                "opacity": 1,
                "outline": 0,
                "padding": 0,
                "width": "1px",
              }
            }
            tabIndex="0"
            type="text"
            value=""
          />
          <div
            style={
              Object {
                "height": 0,
                "left": 0,
                "overflow": "scroll",
                "position": "absolute",
                "top": 0,
                "visibility": "hidden",
                "whiteSpace": "pre",
              }
            }
          >
            
          </div>
        </div>
      </div>
    </div>
    <div
      className=" css-1aqjfd-Component"
    >
      <span
        className=" css-ds71as-Component"
      />
      <div
        aria-hidden="true"
        className="dropdown-indicator css-1ycu3uq-indicatorContainer"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <svg
          aria-hidden={false}
          className="icon_component icon_component--clickable"
          fill="currentColor"
          height="20px"
          onClick={[Function]}
          role="button"
          tabIndex="-1"
          viewBox="0 0 20 20"
          width="20px"
        >
          <path
            clipRule="evenodd"
            d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown renders correctly with id 1`] = `
<div
  className="dropdown-wrapper css-bbwnb8-container"
  onKeyDown={[Function]}
>
  <div
    className=" css-132xx32-control"
    onMouseDown={[Function]}
    onTouchEnd={[Function]}
  >
    <div
      className=" css-1ht1nal-Component"
    >
      <div
        className=" css-1dtegfv-placeholder"
      >
        
      </div>
      <div
        className="css-lkl2xd-Component"
      >
        <div
          className=""
          style={
            Object {
              "display": "inline-block",
            }
          }
        >
          <input
            aria-autocomplete="list"
            aria-label="Dropdown input"
            autoCapitalize="none"
            autoComplete="off"
            autoCorrect="off"
            disabled={false}
            id="react-select-9-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            spellCheck="false"
            style={
              Object {
                "background": 0,
                "border": 0,
                "boxSizing": "content-box",
                "color": "inherit",
                "fontSize": "inherit",
                "label": "input",
                "opacity": 1,
                "outline": 0,
                "padding": 0,
                "width": "1px",
              }
            }
            tabIndex="0"
            type="text"
            value=""
          />
          <div
            style={
              Object {
                "height": 0,
                "left": 0,
                "overflow": "scroll",
                "position": "absolute",
                "top": 0,
                "visibility": "hidden",
                "whiteSpace": "pre",
              }
            }
          >
            
          </div>
        </div>
      </div>
    </div>
    <div
      className=" css-1aqjfd-Component"
    >
      <span
        className=" css-ds71as-Component"
      />
      <div
        aria-hidden="true"
        className="dropdown-indicator css-1ycu3uq-indicatorContainer"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <svg
          aria-hidden={false}
          className="icon_component icon_component--clickable"
          fill="currentColor"
          height="20px"
          onClick={[Function]}
          role="button"
          tabIndex="-1"
          viewBox="0 0 20 20"
          width="20px"
        >
          <path
            clipRule="evenodd"
            d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown renders correctly with multi 1`] = `
<div
  className="dropdown-wrapper css-bbwnb8-container"
  onKeyDown={[Function]}
>
  <div
    className=" css-132xx32-control"
    onMouseDown={[Function]}
    onTouchEnd={[Function]}
  >
    <div
      className=" css-yilbcx-Component"
    >
      <div>
        <div
          data-testid="value-container-chips"
        >
          <div
            className="css-lkl2xd-Component"
          >
            <div
              className=""
              style={
                Object {
                  "display": "inline-block",
                }
              }
            >
              <input
                aria-autocomplete="list"
                aria-label="Dropdown input"
                autoCapitalize="none"
                autoComplete="off"
                autoCorrect="off"
                disabled={false}
                id="react-select-11-input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                spellCheck="false"
                style={
                  Object {
                    "background": 0,
                    "border": 0,
                    "boxSizing": "content-box",
                    "color": "inherit",
                    "fontSize": "inherit",
                    "label": "input",
                    "opacity": 1,
                    "outline": 0,
                    "padding": 0,
                    "width": "1px",
                  }
                }
                tabIndex="0"
                type="text"
                value=""
              />
              <div
                style={
                  Object {
                    "height": 0,
                    "left": 0,
                    "overflow": "scroll",
                    "position": "absolute",
                    "top": 0,
                    "visibility": "hidden",
                    "whiteSpace": "pre",
                  }
                }
              >
                
              </div>
            </div>
          </div>
        </div>
        <div />
      </div>
    </div>
    <div
      className=" css-1aqjfd-Component"
    >
      <span
        className=" css-ds71as-Component"
      />
      <div
        aria-hidden="true"
        className="dropdown-indicator css-1ycu3uq-indicatorContainer"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <svg
          aria-hidden={false}
          className="icon_component icon_component--clickable"
          fill="currentColor"
          height="20px"
          onClick={[Function]}
          role="button"
          tabIndex="-1"
          viewBox="0 0 20 20"
          width="20px"
        >
          <path
            clipRule="evenodd"
            d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown renders correctly with multiline 1`] = `
<div
  className="dropdown-wrapper css-bbwnb8-container"
  onKeyDown={[Function]}
>
  <div
    className=" css-132xx32-control"
    onMouseDown={[Function]}
    onTouchEnd={[Function]}
  >
    <div
      className=" css-1ht1nal-Component"
    >
      <div
        className=" css-1dtegfv-placeholder"
      >
        
      </div>
      <div
        className="css-lkl2xd-Component"
      >
        <div
          className=""
          style={
            Object {
              "display": "inline-block",
            }
          }
        >
          <input
            aria-autocomplete="list"
            aria-label="Dropdown input"
            autoCapitalize="none"
            autoComplete="off"
            autoCorrect="off"
            disabled={false}
            id="react-select-12-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            spellCheck="false"
            style={
              Object {
                "background": 0,
                "border": 0,
                "boxSizing": "content-box",
                "color": "inherit",
                "fontSize": "inherit",
                "label": "input",
                "opacity": 1,
                "outline": 0,
                "padding": 0,
                "width": "1px",
              }
            }
            tabIndex="0"
            type="text"
            value=""
          />
          <div
            style={
              Object {
                "height": 0,
                "left": 0,
                "overflow": "scroll",
                "position": "absolute",
                "top": 0,
                "visibility": "hidden",
                "whiteSpace": "pre",
              }
            }
          >
            
          </div>
        </div>
      </div>
    </div>
    <div
      className=" css-1aqjfd-Component"
    >
      <span
        className=" css-ds71as-Component"
      />
      <div
        aria-hidden="true"
        className="dropdown-indicator css-1ycu3uq-indicatorContainer"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <svg
          aria-hidden={false}
          className="icon_component icon_component--clickable"
          fill="currentColor"
          height="20px"
          onClick={[Function]}
          role="button"
          tabIndex="-1"
          viewBox="0 0 20 20"
          width="20px"
        >
          <path
            clipRule="evenodd"
            d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown renders correctly with options 1`] = `
<div
  className="dropdown-wrapper css-bbwnb8-container"
  onKeyDown={[Function]}
>
  <div
    className=" css-132xx32-control"
    onMouseDown={[Function]}
    onTouchEnd={[Function]}
  >
    <div
      className=" css-1ht1nal-Component"
    >
      <div
        className=" css-1dtegfv-placeholder"
      >
        
      </div>
      <div
        className="css-lkl2xd-Component"
      >
        <div
          className=""
          style={
            Object {
              "display": "inline-block",
            }
          }
        >
          <input
            aria-autocomplete="list"
            aria-label="Dropdown input"
            autoCapitalize="none"
            autoComplete="off"
            autoCorrect="off"
            disabled={false}
            id="react-select-8-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            spellCheck="false"
            style={
              Object {
                "background": 0,
                "border": 0,
                "boxSizing": "content-box",
                "color": "inherit",
                "fontSize": "inherit",
                "label": "input",
                "opacity": 1,
                "outline": 0,
                "padding": 0,
                "width": "1px",
              }
            }
            tabIndex="0"
            type="text"
            value=""
          />
          <div
            style={
              Object {
                "height": 0,
                "left": 0,
                "overflow": "scroll",
                "position": "absolute",
                "top": 0,
                "visibility": "hidden",
                "whiteSpace": "pre",
              }
            }
          >
            
          </div>
        </div>
      </div>
    </div>
    <div
      className=" css-1aqjfd-Component"
    >
      <span
        className=" css-ds71as-Component"
      />
      <div
        aria-hidden="true"
        className="dropdown-indicator css-1ycu3uq-indicatorContainer"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <svg
          aria-hidden={false}
          className="icon_component icon_component--clickable"
          fill="currentColor"
          height="20px"
          onClick={[Function]}
          role="button"
          tabIndex="-1"
          viewBox="0 0 20 20"
          width="20px"
        >
          <path
            clipRule="evenodd"
            d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown renders correctly with placeholder 1`] = `
<div
  className="dropdown-wrapper css-bbwnb8-container"
  onKeyDown={[Function]}
>
  <div
    className=" css-132xx32-control"
    onMouseDown={[Function]}
    onTouchEnd={[Function]}
  >
    <div
      className=" css-1ht1nal-Component"
    >
      <div
        className=" css-1dtegfv-placeholder"
      >
        text
      </div>
      <div
        className="css-lkl2xd-Component"
      >
        <div
          className=""
          style={
            Object {
              "display": "inline-block",
            }
          }
        >
          <input
            aria-autocomplete="list"
            aria-label="Dropdown input"
            autoCapitalize="none"
            autoComplete="off"
            autoCorrect="off"
            disabled={false}
            id="react-select-4-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            spellCheck="false"
            style={
              Object {
                "background": 0,
                "border": 0,
                "boxSizing": "content-box",
                "color": "inherit",
                "fontSize": "inherit",
                "label": "input",
                "opacity": 1,
                "outline": 0,
                "padding": 0,
                "width": "1px",
              }
            }
            tabIndex="0"
            type="text"
            value=""
          />
          <div
            style={
              Object {
                "height": 0,
                "left": 0,
                "overflow": "scroll",
                "position": "absolute",
                "top": 0,
                "visibility": "hidden",
                "whiteSpace": "pre",
              }
            }
          >
            
          </div>
        </div>
      </div>
    </div>
    <div
      className=" css-1aqjfd-Component"
    >
      <span
        className=" css-ds71as-Component"
      />
      <div
        aria-hidden="true"
        className="dropdown-indicator css-1ycu3uq-indicatorContainer"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <svg
          aria-hidden={false}
          className="icon_component icon_component--clickable"
          fill="currentColor"
          height="20px"
          onClick={[Function]}
          role="button"
          tabIndex="-1"
          viewBox="0 0 20 20"
          width="20px"
        >
          <path
            clipRule="evenodd"
            d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown renders correctly with tabIndex 1`] = `
<div
  className="dropdown-wrapper css-bbwnb8-container"
  onKeyDown={[Function]}
>
  <div
    className=" css-132xx32-control"
    onMouseDown={[Function]}
    onTouchEnd={[Function]}
  >
    <div
      className=" css-1ht1nal-Component"
    >
      <div
        className=" css-1dtegfv-placeholder"
      >
        
      </div>
      <div
        className="css-lkl2xd-Component"
      >
        <div
          className=""
          style={
            Object {
              "display": "inline-block",
            }
          }
        >
          <input
            aria-autocomplete="list"
            aria-label="Dropdown input"
            autoCapitalize="none"
            autoComplete="off"
            autoCorrect="off"
            disabled={false}
            id="react-select-13-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            spellCheck="false"
            style={
              Object {
                "background": 0,
                "border": 0,
                "boxSizing": "content-box",
                "color": "inherit",
                "fontSize": "inherit",
                "label": "input",
                "opacity": 1,
                "outline": 0,
                "padding": 0,
                "width": "1px",
              }
            }
            tabIndex={9999}
            type="text"
            value=""
          />
          <div
            style={
              Object {
                "height": 0,
                "left": 0,
                "overflow": "scroll",
                "position": "absolute",
                "top": 0,
                "visibility": "hidden",
                "whiteSpace": "pre",
              }
            }
          >
            
          </div>
        </div>
      </div>
    </div>
    <div
      className=" css-1aqjfd-Component"
    >
      <span
        className=" css-ds71as-Component"
      />
      <div
        aria-hidden="true"
        className="dropdown-indicator css-1ycu3uq-indicatorContainer"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <svg
          aria-hidden={false}
          className="icon_component icon_component--clickable"
          fill="currentColor"
          height="20px"
          onClick={[Function]}
          role="button"
          tabIndex="-1"
          viewBox="0 0 20 20"
          width="20px"
        >
          <path
            clipRule="evenodd"
            d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown renders correctly with value 1`] = `
<div
  className="dropdown-wrapper css-bbwnb8-container"
  onKeyDown={[Function]}
>
  <div
    className=" css-132xx32-control"
    onMouseDown={[Function]}
    onTouchEnd={[Function]}
  >
    <div
      className=" css-1ht1nal-Component"
    >
      <div
        className=" css-1f92y5n-singleValue"
      >
        Ocean
      </div>
      <div
        className="css-lkl2xd-Component"
      >
        <div
          className=""
          style={
            Object {
              "display": "inline-block",
            }
          }
        >
          <input
            aria-autocomplete="list"
            aria-label="Dropdown input"
            autoCapitalize="none"
            autoComplete="off"
            autoCorrect="off"
            disabled={false}
            id="react-select-14-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            spellCheck="false"
            style={
              Object {
                "background": 0,
                "border": 0,
                "boxSizing": "content-box",
                "color": "inherit",
                "fontSize": "inherit",
                "label": "input",
                "opacity": 1,
                "outline": 0,
                "padding": 0,
                "width": "1px",
              }
            }
            tabIndex="0"
            type="text"
            value=""
          />
          <div
            style={
              Object {
                "height": 0,
                "left": 0,
                "overflow": "scroll",
                "position": "absolute",
                "top": 0,
                "visibility": "hidden",
                "whiteSpace": "pre",
              }
            }
          >
            
          </div>
        </div>
      </div>
    </div>
    <div
      className=" css-1aqjfd-Component"
    >
      <div
        aria-hidden="true"
        className="clear-indicator css-11of1qg-Component"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <svg
          aria-hidden={false}
          className="icon_component icon_component--clickable"
          fill="currentColor"
          height="20px"
          onClick={[Function]}
          role="button"
          tabIndex="-1"
          viewBox="0 0 20 20"
          width="20px"
        >
          <path
            clipRule="evenodd"
            d="M6.53033 5.46967C6.23744 5.17678 5.76256 5.17678 5.46967 5.46967C5.17678 5.76256 5.17678 6.23744 5.46967 6.53033L8.62562 9.68628L5.47045 12.8415C5.17756 13.1343 5.17756 13.6092 5.47045 13.9021C5.76334 14.195 6.23822 14.195 6.53111 13.9021L9.68628 10.7469L12.8415 13.9021C13.1343 14.195 13.6092 14.195 13.9021 13.9021C14.195 13.6092 14.195 13.1343 13.9021 12.8415L10.7469 9.68628L13.9029 6.53033C14.1958 6.23744 14.1958 5.76256 13.9029 5.46967C13.61 5.17678 13.1351 5.17678 12.8422 5.46967L9.68628 8.62562L6.53033 5.46967Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </div>
      <span
        className=" css-ds71as-Component"
      />
      <div
        aria-hidden="true"
        className="dropdown-indicator css-1ycu3uq-indicatorContainer"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <svg
          aria-hidden={false}
          className="icon_component icon_component--clickable"
          fill="currentColor"
          height="20px"
          onClick={[Function]}
          role="button"
          tabIndex="-1"
          viewBox="0 0 20 20"
          width="20px"
        >
          <path
            clipRule="evenodd"
            d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown renders correctly without clear button 1`] = `
<div
  className="dropdown-wrapper css-bbwnb8-container"
  onKeyDown={[Function]}
>
  <div
    className=" css-132xx32-control"
    onMouseDown={[Function]}
    onTouchEnd={[Function]}
  >
    <div
      className=" css-1ht1nal-Component"
    >
      <div
        className=" css-1dtegfv-placeholder"
      >
        
      </div>
      <div
        className="css-lkl2xd-Component"
      >
        <div
          className=""
          style={
            Object {
              "display": "inline-block",
            }
          }
        >
          <input
            aria-autocomplete="list"
            aria-label="Dropdown input"
            autoCapitalize="none"
            autoComplete="off"
            autoCorrect="off"
            disabled={false}
            id="react-select-6-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            spellCheck="false"
            style={
              Object {
                "background": 0,
                "border": 0,
                "boxSizing": "content-box",
                "color": "inherit",
                "fontSize": "inherit",
                "label": "input",
                "opacity": 1,
                "outline": 0,
                "padding": 0,
                "width": "1px",
              }
            }
            tabIndex="0"
            type="text"
            value=""
          />
          <div
            style={
              Object {
                "height": 0,
                "left": 0,
                "overflow": "scroll",
                "position": "absolute",
                "top": 0,
                "visibility": "hidden",
                "whiteSpace": "pre",
              }
            }
          >
            
          </div>
        </div>
      </div>
    </div>
    <div
      className=" css-1aqjfd-Component"
    >
      <span
        className=" css-ds71as-Component"
      />
      <div
        aria-hidden="true"
        className="dropdown-indicator css-1ycu3uq-indicatorContainer"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <svg
          aria-hidden={false}
          className="icon_component icon_component--clickable"
          fill="currentColor"
          height="20px"
          onClick={[Function]}
          role="button"
          tabIndex="-1"
          viewBox="0 0 20 20"
          width="20px"
        >
          <path
            clipRule="evenodd"
            d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;
